<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="refresh_string">Refresh</string>
    <string name="mute">Mute Sound</string>
    <string name="tritonmon">Tritonmon</string>
    <string name="main_menu">Main Menu</string>
    <string name="begin_journey">Begin Journey</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="done">Done</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="facebook_login_screen">Facebook Login Screen</string>
    <string name="facebook_login">Facebook Login</string>
    <string name="create_avatar">Create Avatar</string>
    <string name="create_avatar_now">Create Avatar Now</string>
    <string name="heal_pokemon">Heal Pokemon</string>
    <string name="restock_pokeballs">Restock Pokeballs</string>
    <string name="change_pokemon">Change Pokemon</string>
    <string name="welcome">Welcome</string>
    <string name="pokemon_center">Pokemon Center</string>
    <string name="pokecenter">PokeCenter</string>
    <string name="map_screen">Map Screen</string>
    <string name="view_map">View Map</string>
    <string name="map">Map</string>
    <string name="battle">Battle</string>
    <string name="battle_screen">Battle Screen</string>
    <string name="trainer_card">Trainer Card</string>
    <string name="line1">Line 1</string>
    <string name="line2">Line 2</string>
    <string name="bulbasaur">Bulbasaur</string>
    <string name="grass_type">Grass Type</string>
    <string name="charmander">Charmander</string>
    <string name="fire_type">Fire Type</string>
    <string name="squirtle">Squirtle</string>
    <string name="water_type">Water Type</string>
    <string name="hometown">hometown</string>
    <string name="hometown_colon">hometown:</string>
    <string name="boy">Boy</string>
    <string name="girl">Girl</string>
    <string name="wins">Wins: </string>
    <string name="win_num">(#)</string>
    <string name="losses">Losses: </string>
    <string name="loss_num">(##)</string>
    <string name="region">Region: LOCATION</string> <!-- Create strings for locations -->

    <string name="log_out">Log Out</string>
    <string name="opponent_pokemon">Opponent Pokemon info</string>
    <string name="your_pokemon">Your Pokemon info</string>
    <string name="attack1">Attack 1</string>
    <string name="attack2">Attack 2</string>
    <string name="attack3">Attack 3</string>
    <string name="attack4">Attack 4</string>
    <string name="throw_pokeball">Throw Pokeball</string>
    <string name="run">Run</string>
    <string name="health">Health</string>
    <string name="pokemon">Pokemon</string>
    <string name="xp">XP</string>
    <string name="move1">Move 1</string>
    <string name="move2">Move 2</string>
    <string name="move3">Move 3</string>
    <string name="move4">Move 4</string>

    <string-array name="hometown_array">
        <item>ERC</item>
        <item>Marshall</item>
        <item>Muir</item>
        <item>Revelle</item>
        <item>Sixth</item>
        <item>Warren</item>
    </string-array>
    <string-array name="welcome_line1_array">
        <item>Hello there PLAYER!</item>
        <item>My name is Professor Ganz!</item>
        <item>First, tell me a little about yourself.</item>
        <item>Right... So you are PLAYER from HOMETOWN!</item>
        <item>I have 3 Pokemon here, but you can have one!</item>
        <item>Your very own Pokemon legend is about to unfold!</item>
    </string-array>
    <string-array name="welcome_line2_array">
        <item>Welcome to the world of Pokemon!</item>
        <item>People call me the Pokemon Prof!</item>
        <item>Now tell me. Are you a boy? Or are you a girl?</item>
        <item>This world is inhabited far and wide by creatures called Pokemon.</item>
        <item>Now, PLAYER, which Pokemon do you want?</item>
        <item>A world of dreams and adventures with Pokemon awaits! Let\'s go!</item>
    </string-array>

    <string name="party">Party</string>
    <string name="hello_world">Hello world!</string>
    <string name="health_bar">Health Bar</string>
    <string name="pokeball">Pokeball</string>

    <string-array name="random_names">
        <item>Brad Mehldau</item>
        <item>Joshua Redman</item>
        <item>Chick Corea</item>
        <item>Kurt Rosenwinkel</item>
        <item>Miles Davis</item>
        <item>Wayne Shorter</item>
        <item>Michael Brecker</item>
        <item>Herbie Hancock</item>
        <item>Joe Zawinul</item>
        <item>Brian Blade</item>
        <item>Jeff Ballard</item>
        <item>Larry Grenadier</item>
        <item>Keith Jarrett</item>
        <item>McCoy Tyner</item>
        <item>Stephon Harris</item>
        <item>Mark Turner</item>
    </string-array>
    <string-array name="random_names_2">
        <item>Brad Mehldau</item>
        <item>Joshua Redman</item>
        <item>Chick Corea</item>
        <item>Kurt Rosenwinkel</item>
        <item>Miles Davis</item>
        <item>Wayne Shorter</item>
        <item>Michael Brecker</item>
        <item>Herbie Hancock</item>
        <item>Joe Zawinul</item>
        <item>Brian Blade</item>
        <item>Jeff Ballard</item>
        <item>Larry Grenadier</item>
        <item>Keith Jarrett</item>
        <item>McCoy Tyner</item>
        <item>Stephon Harris</item>
        <item>Mark Turner</item>
    </string-array>

    <string name="title_activity_battle_party">BattleParty</string>
    <string name="level">Level</string>
    <string name="winslosses">Wins/Losses</string>
    <string name="challenge">challenge</string>
    <string name="trade">trade</string>
    <string name="trading_list">Trading List</string>
    <string name="open_to_trade">Open to Trading</string>
    <string name="trading_with">trading with</string>
    <string name="trading_view">Trading View</string>
    <string name="title_activity_maps">Map</string>

</resources>
