<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:gravity="center">

    <ImageView
        android:layout_width="160px"
        android:layout_height="160px"
        android:id="@+id/pokemonImage"
        android:src="@drawable/p025"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="5dp"
        android:id="@+id/pokemonInfo"
        android:layout_weight="3">

        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pokemon" />

        <TextView
            android:id="@+id/healthBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/health_bar" />

        <TextView
            android:id="@+id/healthText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/health" />
    </LinearLayout>

    <ImageView
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:id="@+id/pokeballImage"
        android:src="@drawable/pokeball"
        android:layout_weight="1" />

</LinearLayout>