<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:id="@+id/loginScreen"
    android:background="@drawable/login_register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login"
        android:id="@+id/loginTitle"
        android:layout_gravity="center_horizontal"
        android:textSize="50sp"
        android:layout_weight="0.5"
        android:gravity="center" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:ems="10"
            android:id="@+id/loginUsername"
            android:layout_gravity="right"
            android:inputType="text"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/loginPassword"
            android:text="@string/password"
            android:inputType="textVisiblePassword"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/login"
        android:id="@+id/loginButton"
        android:layout_gravity="center"
        android:src="@drawable/login"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/errorMsg"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffff0000"
        android:layout_weight="0.5"
        android:gravity="center" />

</LinearLayout>
