<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/drag_content">

        <ImageView
            android:id="@id/drag_handle"
            android:background="@drawable/ic_drawer"
            android:layout_width="25dp"
            android:layout_height="wrap_content"
            android:cropToPadding="false"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp" />

        <ImageView
            android:layout_width="160px"
            android:layout_height="160px"
            android:id="@+id/dslv_pokemonImage"
            android:src="@drawable/p025"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingRight="5dp"
        android:layout_weight="1"
        android:id="@+id/pokemonInfo"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dslv_nameText"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/pokemon"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/level"
                android:id="@+id/dslv_levelText"
                android:layout_weight="1"
                android:gravity="right" />
        </LinearLayout>

        <TextView
            android:id="@+id/dslv_healthText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/health" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dslv_healthBar"
            android:progressDrawable="@drawable/progress_bar_green" />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dslv_xpBar" />
    </LinearLayout>

</LinearLayout>